Fix font-size automatic resizes on mobiles.

--- a/caliop.ng/src/less/layout.less
+++ b/caliop.ng/src/less/layout.less
@@ -1,5 +1,9 @@
 body {
     font-family : @sansFontFamily;
+
+    -webkit-text-size-adjust: none;
+    -ms-text-size-adjust: none;
+    -moz-text-size-adjust: none;
 }
 
 #main {
